[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.FeeWaiverAppellate"
version = "0.3.0"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Matt Newsted", email = "mnewsted@illinoislegalaid.org" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
